# secret-sharing-app

./: README.md  package-lock.json  package.json
components/: SimpleDecrypt.vue  SimpleEncrypt.vue
pages/: index.vue
pages/sharing/: simple.vue
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
