[package]
name = "secret_sharing_app"
version = "0.0.1"
description = "A secret sharing app built with Nuxt.js and Tauri"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "secret_sharing_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-rc", features = [] }

[dependencies]
tauri = { version = "2.0.0-rc", features = [] }
tauri-plugin-shell = "2.0.0-rc"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sharks = "0.5.0"
base64 = "0.22.0"

[dev-dependencies]
rand = "0.8.5"
